--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@blueprintjs/core": "^5.8.2",
     "@reduxjs/toolkit": "^2.0.1",
     "ace-builds": "^1.32.3",
+    "axios": "^1.6.5",
     "browserfs": "^1.4.3",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
