--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "axios": "^1.6.5",
     "browserfs": "^1.4.3",
     "classnames": "^2.5.1",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
+    "@types/lodash.clonedeep": "^4.5.9",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
