Configure enabled languages via feature flags

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,11 @@
 VITE_APP_NAME=
 VITE_BACKEND_URL=http://localhost:4000
 VITE_SICP_BACKEND_URL=http://localhost:8080
+
+# Feature flags
+VITE_FEATURE_ENABLE_SOURCE=TRUE
+VITE_FEATURE_ENABLE_FULL_JS=FALSE
+VITE_FEATURE_ENABLE_FULL_TS=FALSE
+VITE_FEATURE_ENABLE_HTML=FALSE
+VITE_FEATURE_ENABLE_PYTHON=TRUE
+VITE_FEATURE_ENABLE_SCHEME=TRUE
