--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
   "dependencies": {
     "@blueprintjs/core": "^5.8.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@szhsin/react-menu": "^4.1.0",
     "ace-builds": "^1.32.3",
     "axios": "^1.6.5",
     "browserfs": "^1.4.3",
     "classnames": "^2.5.1",
     "js-slang": "^1.0.37",
     "lodash.clonedeep": "^4.5.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-resizable-panels": "^1.0.9",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@types/lodash.clonedeep": "^4.5.9",
+    "@types/node": "^20.11.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
