--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
+    "react-latex-next": "^2.2.0",
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^1.0.9",
     "react-responsive": "^9.0.2",
