--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^1.0.9",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/lodash.clonedeep": "^4.5.9",
