--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -15,10 +15,10 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           cache: yarn
       - name: Install Dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
       - name: Build Site
         run: yarn build --base=/frontend2/
         env:
