--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "axios": "^1.8.2",
     "browserfs": "^1.4.3",
     "classnames": "^2.5.1",
+    "es-toolkit": "^1.34.1",
     "js-slang": "^1.0.81",
-    "lodash.clonedeep": "^4.5.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-ace": "^12.0.0",
@@ -32,7 +32,6 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
-    "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
