--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.0.13",
     "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.21.3",
+    "react-router": "^7.4.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
